--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cloud_firestore:
   firebase_storage:
   intl:
+  location:
   image_picker: ^0.6.7+4
   flutter:
     sdk: flutter
